# nn20db-sdk

./: .gitignore  LICENSE.txt  README.md
.devcontainer/esp32/: Dockerfile  devcontainer.json
api/python/: .gitignore  Makefile  README.md  abi_check.c  nn20db.py
demos/geo/esp32/: .gitignore  CMakeLists.txt  Makefile  README.md
demos/geo/esp32/main/: main.c
demos/geo/linux/python/: .gitignore  README.md  demo_geonames_10k.py
demos/sift128/: PQ_OPTIMIZATION.md
demos/sift128/esp32/sift_persistent_search/: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.board.waveshare_s3_zero_sdspi  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3
demos/sift128/esp32/sift_persistent_search/docs/: SD_IO_LATENCY_FINDINGS.md
demos/sift128/esp32/sift_persistent_search/main/: CMakeLists.txt  config_fp32.h  config_pq.h  main.c  sd_storage.h  sd_storage_waveshare_p4.c  sd_storage_waveshare_s3_touch.c  sd_storage_waveshare_s3_zero_sdspi.c  sift_queries.h
demos/sift128/linux/sift_persistent/: .gitignore  CMakeLists.txt  Makefile  README.md  config_fp32.h  config_pq.h  main.c
scripts/: install-sdk.sh
